--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
     "name": "datatables.net",
     "description": "DataTables for jQuery ",
+    "version": "1.10.21",
     "main": [
         "js/jquery.dataTables.js"
     ],
